cmake_minimum_required(VERSION 3.23)
project(HW2)

set(CMAKE_CXX_STANDARD 14)

add_executable(HW2 main.cpp ex4.cpp Headers/ex4.h ex6.cpp Headers/ex6.h random_double.cpp Headers/random_double.h ex5.cpp Headers/ex5.h random_int.cpp Headers/random_int.h ex7.cpp Headers/ex7.h ex8.cpp Headers/ex8.h ex9.cpp Headers/ex9.h ex10.cpp Headers/ex10.h Headers/main.h Swap.cpp Headers/Swap.h ex11.cpp Headers/ex11.h ex12.cpp Headers/ex12.h ex13.cpp Headers/ex13.h arr_sort.cpp Headers/arr_sort.h ex14.cpp Headers/ex14.h)
